<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectAudio">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clPlaceholder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnSelectAudio">

        <ImageView
            android:id="@+id/ivPlaceholder"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:src="@drawable/select_audio"
            android:alpha="0.5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tvPlaceholder"
            app:layout_constraintVertical_chainStyle="packed"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvPlaceholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/select_audio_from_storage"
            style="@style/TextAppearance.Material3.TitleMedium"
            app:layout_constraintTop_toBottomOf="@id/ivPlaceholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clSelectedAudio"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnSelectAudio">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/crdAudioPlayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="?attr/colorPrimaryContainer"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tlDetails">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.progressindicator.LinearProgressIndicator
                    android:id="@+id/lpiAudioTrack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:indeterminate="false"
                    app:trackThickness="4dp"
                    app:trackCornerRadius="4dp"
                    tools:progress="50"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/tvCurrentDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="16dp"
                    style="@style/TextAppearance.Material3.TitleMedium"
                    tools:text="00:00"
                    app:layout_constraintTop_toBottomOf="@id/lpiAudioTrack"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tvTotalDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    style="@style/TextAppearance.Material3.TitleMedium"
                    tools:text="2:00"
                    app:layout_constraintTop_toBottomOf="@id/lpiAudioTrack"
                    app:layout_constraintEnd_toEndOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnStop"
                    style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    app:icon="@drawable/stop"
                    android:text="@string/stop"
                    app:layout_constraintTop_toBottomOf="@id/tvTotalDuration"
                    app:layout_constraintEnd_toStartOf="@id/btnPlayPause"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnPlayPause"
                    style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    app:icon="@drawable/play"
                    android:text="@string/play"
                    app:layout_constraintTop_toBottomOf="@id/tvTotalDuration"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <TableLayout
            android:id="@+id/tlDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent">

            <TableRow>
                <TextView android:text="@string/name"
                    style="@style/TextAppearance.Material3.TitleMedium"/>
                <TextView android:text="@string/colon"
                    style="@style/TextAppearance.Material3.TitleMedium" />
                <TextView
                    android:id="@+id/tvAudioFileName"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow>
                <TextView android:text="@string/size"
                    style="@style/TextAppearance.Material3.TitleMedium"/>
                <TextView android:text="@string/colon"
                    style="@style/TextAppearance.Material3.TitleMedium" />
                <TextView
                    android:id="@+id/tvAudioFileSize"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow>
                <TextView android:text="@string/mime_type"
                    style="@style/TextAppearance.Material3.TitleMedium" />
                <TextView android:text="@string/colon"
                    style="@style/TextAppearance.Material3.TitleMedium" />
                <TextView
                    android:id="@+id/tvAudioFileType"
                    android:layout_weight="1"/>
            </TableRow>
        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAudios"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:visibility="gone"
        tools:visibility="visible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnSelectAudio"
        tools:listitem="@layout/item_audio_data"/>

    <Button
        android:id="@+id/btnSelectAudio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_max="320dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/select_audio"
        app:layout_constraintBottom_toTopOf="@id/switchMultipleFiles"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switchMultipleFiles"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_max="320dp"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        tools:checked="true"
        android:text="@string/select_multiple_files"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>